fixed overflowing css

--- a/styles/brand.css
+++ b/styles/brand.css
@@ -14,7 +14,12 @@
     margin: 24px;
     border-radius: 50%;
     border: none;
-    box-shadow: inset 0 0 0 1px rgba(0,0,0, 0.35), inset 0 0 0 2px rgba(255,255,255, 0.10), inset 0 2px 0 0 rgba(255,255,255, 0.45), inset 0 -2px 0 0 rgba(255,255,255, 0.15), 0 1px 3px 0 rgba(0,0,0,0.12), 0 1px 2px 0 rgba(0,0,0,0.24);
+    box-shadow: inset 0 0 0 1px rgba(0,0,0, 0.35),
+                inset 0 0 0 2px rgba(255,255,255, 0.10),
+                inset 0 2px 0 0 rgba(255,255,255, 0.45),
+                inset 0 -2px 0 0 rgba(255,255,255, 0.15),
+                0 1px 3px 0 rgba(0,0,0,0.12),
+                0 1px 2px 0 rgba(0,0,0,0.24);
 }
 
 .page-brand .blue {
